Fix li tags overflowing in post sources list

--- a/blog/blog.css
+++ b/blog/blog.css
@@ -1,6 +1,6 @@
 #title{font-size: x-large;}
         a.ablack{color:black !important;}
-        li{margin-bottom:8px;}
+        li{margin-bottom:8px;overflow-wrap:anywhere;}
         ul,ol{margin-left:24px;margin-right:24px;}
         #all_posts{margin-top:24px;text-align:center;}
         .subtitle{font-size:small;margin:12px 0px;}
